<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView android:text="@string/overview5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:textStyle="bold"
        android:textSize="@dimen/overview"
        android:textAlignment="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView android:text="@string/overview1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView1"
        android:textSize="@dimen/overview"
        android:textStyle="bold"
        android:layout_marginTop="23dp"
        android:layout_below="@+id/textView5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView android:text="@string/overview2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:textSize="@dimen/overview"
        android:textStyle="bold"
        android:layout_marginTop="22dp"
        android:layout_below="@+id/textView1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <TextView android:text="@string/overview4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:textSize="@dimen/overview"
        android:textStyle="bold"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp" />

    <TextView android:text="@string/overview3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:textSize="@dimen/overview"
        android:textStyle="bold"
        android:layout_marginTop="36dp"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/beginGame"
        android:id="@+id/beginGame"
        android:textColor="@color/greenAndroid"
        android:textStyle="bold"
        android:layout_marginTop="38dp"
        android:layout_below="@+id/textView3"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_highscore"
        android:id="@+id/setting"
        android:textStyle="bold"
        android:layout_alignTop="@+id/beginGame"
        android:layout_centerHorizontal="true" />

    <Button

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:id="@+id/exit"
        android:textStyle="bold"
        android:textColor="@color/exitRed"
        android:layout_alignTop="@+id/setting"
        android:layout_toRightOf="@+id/textView4"
        android:layout_toEndOf="@+id/textView4" />



</RelativeLayout>
